--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -75,19 +75,19 @@
                 <div>
                     <h2>Ready to get started?</h2>
                     <p class="sell-date">
-                        Now accepting clients for April 2017. <span>10 spots available.</span>
+                        Now accepting clients for April 2017.
                     </p>
                     <article>
                         <div class="card">
                             <p>
-                                For 8-weeks we'll meet for an hour every other and build your Freelance Plan.
+                                For 8 weeks we'll meet for an hour every other week and build your Freelance Plan. In between sessions, you'll receive weekly homework and check-in calls.
                             </p>
                             <p class="payment-plan">
-                                2 monthly payments of <span>$199</span>
+                                2 monthly payments of <span>$447</span>
                             </p>
                             <a href="https://gumroad.com/l/freelance-plan-4-hours" target="_blank">
                                 <button>
-                                    Buy 4 hour package
+                                    Buy 8 week package
                                 </button>
                             </a>
 
@@ -203,7 +203,7 @@
             <section class="interest-list-description" id="wip-block-r">
                 <div class="il-header-description" id="aleia-bio-sales-pages">
                     <figure class="familiar-photo">
-                        <img src="../img/aleia-excited.png">
+                        <img src="../img/website-about.jpg">
                     </figure>
                     <div class="familiar familiar-left">
                         <h2>A little about Aleia</h2>
@@ -211,21 +211,19 @@
                             Hi, i'm <span>Aleia Walker</span> a Freelance <span>Web Developer</span>.
                         </p>
                         <p>
-                            But three years ago I started a job as an <span>unhappy corporate drone</span>.</p>
-                        <p>
-                            I immediately <span>knew that something needed to change</span>, so I started looking for skills that would let me quit my full-time job and work on my own terms.
+                            But three years ago I started a job as an unhappy corporate drone. I immediately <span>knew that something needed to change</span>, so I started looking for skills that would let me quit my full-time job and work on my own terms.
                         </p>
                         <p>
-                            I <span>tested out a few side hustles</span>. Calligraphy, woodworking, business writing, and social media strategy to name a few until settling on web development and design - it's now one of my greatest passions!
-                        </p> 
-                        <p>
-                            It wasn't an easy journey and I did not have limitless funds or time - so I made sure <span>I could learn and apply a lot in a little time, with little money</span>.
+                            I <span>tested out a few side hustles</span> before settling on web development! It wasn't an easy journey and I did not have limitless funds or time - so I made sure <span>I could learn and apply a lot with a little</span> by only investing in meaningful strategies.
                         </p>
                         <p>
                             Six months after starting to learn new skills, <span>I started freelancing</span>. And a year later, <span>I quit my full-time job</span>. And I feel like <span>I provide value to someone every damn day</span>.
                         </p>
                         <p>
-                            Three months after quitting my dayjob, <span>I doubled my income</span>. And I'll triple it by the one year mark.
+                            Three months after quitting my day job, <span>I doubled my income</span>. And I'll triple it by the one year mark.
+                        </p>
+                        <p>
+                            I’m not a unicorn or a fairy or some other mythical creature who is the only one who ever experiences these things. You can make this your story.
                         </p>
                     </div>
                 </div>
@@ -234,19 +232,19 @@
                 <div>
                     <h2>Ready to get started?</h2>
                     <p class="sell-date">
-                        Now accepting clients for April 2017. <span>10 spots available.</span>
+                        Now accepting clients for April 2017.
                     </p>
                     <article>
                         <div class="card">
                             <p>
-                                For 8-weeks we'll meet for an hour every other and build your Freelance Plan.
+                                For 8 weeks we'll meet for an hour every other week and build your Freelance Plan. In between sessions, you'll receive weekly homework and check-in calls.
                             </p>
                             <p class="payment-plan">
-                                2 monthly payments of <span>$199</span>
+                                2 monthly payments of <span>$447</span>
                             </p>
                             <a href="https://gumroad.com/l/freelance-plan-4-hours" target="_blank">
                                 <button>
-                                    Buy 4 hour package
+                                    Buy 8 week package
                                 </button>
                             </a>
 
@@ -257,7 +255,7 @@
                         </div>
                     </article>
 
-                    <article class="lower-purchase">
+                    <!-- <article class="lower-purchase">
                         <div class="card card-small">
                             <p>Not ready to commit to a package yet? Set up a one-hour power session</p>
                             <p class="payment-plan">
@@ -269,7 +267,7 @@
                                 </button>
                             </a>
                         </div>
-                    </article>
+                    </article> -->
                 </div>
             </section>
             <section class="convertkit">
@@ -279,8 +277,8 @@
                 </aside>
             </section>
             <div class="social-media-photos">
-                <img src="https://www.aleiawalker.com/img/freelance-plan.jpg" alt="freelance plan pinterest photo">
-                <img src="https://www.aleiawalker.com/img/freelance-wide.jpg" alt="freelance plan twitter facebook photo">
+                <img src="http://www.aleiawalker.com/img/freelance-plan.png" alt="freelance plan | freelance | freelancing | coaching | career changers | career changer coach">
+                <img src="http://www.aleiawalker.com/img/freelance-wide.png" alt="freelance plan | freelance | freelancing | coaching | career changers | career changer coach">
             </div>
         </div> <!-- wrapper -->
 
