--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -51,37 +51,37 @@
             <div class="menu-wrapper">
                 <ul class="menu-active">
                         <li>
-                            <a href="#">
+                            <a href="../#">
                                 Home                                
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="about/">
+                            <a href="../about/">
                                 About Me
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="work-with-me/">
+                            <a href="../work-with-me/">
                                 Work with Me
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="portfolio/">
+                            <a href="#">
                                 Portfolio
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="blog/">
+                            <a href="../blog/">
                                 Blog
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="contact/">
+                            <a href="../contact/">
                                 Contact
                             </a>
                         </li>
