--- a/march-update/work-with-me/index.html
+++ b/march-update/work-with-me/index.html
@@ -44,37 +44,37 @@
                     <div class="menu-wrapper">
                         <ul class="menu-active">
                         <li>
-                            <a href="#">
+                            <a href="../#">
                                 Home                                
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="about/">
+                            <a href="../about/">
                                 About Me
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="work-with-me/">
+                            <a href="#">
                                 Work with Me
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="portfolio/">
+                            <a href="../portfolio/">
                                 Portfolio
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="blog/">
+                            <a href="../blog/">
                                 Blog
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <li class="spacer"></li>
                         <li>
-                            <a href="contact/">
+                            <a href="../contact/">
                                 Contact
                             </a>
                         </li>
@@ -88,7 +88,7 @@
                     <aside class="welcome-photos">
                         <div class="photo-row">
                             <figure class="aleia-photo">
-                                <img src="../img/aleia-4.jpg" alt="photo of Aleia">
+                                <img src="../img/aleia-5.jpg" alt="photo of Aleia">
                             </figure>
                         </div>
                     </aside>
