updated freelance plan copy

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -46,7 +46,7 @@
             </figure>
             <section class="fp-bio">
                 <p>
-                    Are you ready to take your side hustle full-time by using resources and learning strategies to help you quit your 9 to 5?
+                    Are you ready to take your side hustle full-time by using resources and learning strategies to help you quit your day job?
                 </p>
             </section>
             <section class="interest-list-description">
@@ -73,15 +73,23 @@
             </section>
             <section class="fp-dark gumroad" id="buy-fp-now">
                 <div>
-                    <h2>Ready to get started?</h2>
-                    <p class="sell-date">
+                    <h2>Ready to get started? Here's what you'll get.</h2>
+                    <!-- <p class="sell-date">
                         Now accepting clients for April 2017.
-                    </p>
+                    </p> -->
                     <article>
                         <div class="card">
-                            <p>
-                                For 8 weeks we'll meet for an hour every other week and build your Freelance Plan. In between sessions, you'll receive weekly homework and check-in calls.
-                            </p>
+                            <ul>
+                                <li>
+                                    <i class="fa fa-circle-o"></i> Eight weeks of support including 4 live calls, weekly check-ins, and an action plan to get you to the next step.
+                                </li>
+                                <li>
+                                    <i class="fa fa-circle-o"></i> A kick in the butt to make your freelance business a priority.
+                                </li>
+                                <li>
+                                    <i class="fa fa-circle-o"></i> The ear of a side hustler who already quit her full-time job and is in the trenches making freelance work - while being location independent.
+                                </li>
+                            </ul>
                             <p class="payment-plan">
                                 2 monthly payments of <span>$447</span>
                             </p>
@@ -176,7 +184,7 @@
                     <aside>
                         <h3>Who is this for?</h3>
                         <p>
-                            <i class="fa fa-check"></i> You're almost decided on choosing your side hustle but you need help making a plan to <span>quit your 9 to 5 job</span>.
+                            <i class="fa fa-check"></i> You're almost decided on choosing your side hustle but you need help making a plan to <span>quit your day job</span>.
                         </p>
                         <p>
                             <i class="fa fa-check"></i> You want to work together someone who took their <span>side hustle full-time</span> to build your side hustle education, implementation, and marketing plan.
@@ -230,15 +238,23 @@
             </section>
             <section class="fp-dark gumroad">
                 <div>
-                    <h2>Ready to get started?</h2>
-                    <p class="sell-date">
+                    <h2>Ready to get started? Here's what you'll get.</h2>
+                    <!-- <p class="sell-date">
                         Now accepting clients for April 2017.
-                    </p>
+                    </p> -->
                     <article>
                         <div class="card">
-                            <p>
-                                For 8 weeks we'll meet for an hour every other week and build your Freelance Plan. In between sessions, you'll receive weekly homework and check-in calls.
-                            </p>
+                            <ul>
+                                <li>
+                                    <i class="fa fa-circle-o"></i> Eight weeks of support including 4 live calls, weekly check-ins, and an action plan to get you to the next step.
+                                </li>
+                                <li>
+                                    <i class="fa fa-circle-o"></i> A kick in the butt to make your freelance business a priority.
+                                </li>
+                                <li>
+                                    <i class="fa fa-circle-o"></i> The ear of a side hustler who already quit her full-time job and is in the trenches making freelance work - while being location independent.
+                                </li>
+                            </ul>
                             <p class="payment-plan">
                                 2 monthly payments of <span>$447</span>
                             </p>
