--- a/march-update/contact/index.html
+++ b/march-update/contact/index.html
@@ -88,66 +88,22 @@
                         </aside>
                         <aside class="welcome-info">
                             <div class="welcome-info-wrapper">
-                                <p class="welcome-intro">
-                                    <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
-                                </p>
-                                <h1 class="uppercase">Aleia Walker</h1>
-                                <p class="welcome-tagline">
-                                    <span class="welcome-span">I am a web designer/developer + <a href="https://www.bit.ly/side-hustle-starter">holder of all the freelance resources</a> + instructor at Skillcrush</span>.
-                                </p>
-                                <div class="opt-in-tagline non-homepage">
-                                    <p>... and I help freelancers take their hustles full time.<br>
-                                    Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
-                                </div>
-                            </div> <!-- welcome info wrapper -->
+                                <p>
+                                <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
+                            </p>
+                            <h1 class="uppercase">Aleia Walker</h1>
+                            <p class="welcome-tagline">
+                                <span class="welcome-span">I am a web developer + <a href="https://www.bit.ly/freelance-plan">and freelance mentor</a> + instructor at Skillcrush</span>.
+                            </p>
+                            <div class="opt-in-tagline non-homepage">
+                                <p>... and I help freelancers quit their day jobs.</p>
+                                <p>Stop working alone in a bubble and ask for help. Download the guide to find your tribe.</p>
+                            </div>
+                        </div> <!-- welcome info wrapper -->
                         <div class="email-signup">
-                                <!-- Begin ConvertKit Signup Form -->
-                                <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
-                                <div class="ck_form_container ck_inline" data-ck-version="6">
-                                  <div class="ck_form ck_naked">
-                                  <div class="ck_form_fields">
-                                    <div id="ck_success_msg" style="display:none;">
-                                      <p>Success! Now check your email to confirm your subscription and download your guide.</p>
-                                    </div>
-
-                                    <!--  Form starts here  -->
-                                    <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/159992/subscribe" data-remote="true">
-                                      <input type="hidden" value="{&quot;form_style&quot;:&quot;naked&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
-                                      <input type="hidden" name="id" value="159992" id="landing_page_id">
-                                      <div class="ck_errorArea">
-                                        <div id="ck_error_msg" style="display:none">
-                                          <p>There was an error submitting your subscription. Please try again.</p>
-                                        </div>
-                                      </div>
-                                      <div class="ck_control_group ck_email_field_group">
-                                        <label class="ck_label" for="ck_emailField" style="display: none">Email Address</label>
-                                        <input type="text" name="first_name" class="ck_first_name" id="ck_firstNameField" placeholder="First Name">
-                                        <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="Email Address" required>
-                                      </div>
-                                      <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
-                                        <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
-                                      </div>
-
-
-                                      <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
-                                        Get your resources
-                                      </button>
-                                    </form>
-                                  </div>
-
-                                </div>
-
-                                </div>
-                                <!-- Begin MailChimp Signup Form -->
-                                <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-                                <div id="mc_embed_signup">
-                                    <div id="mc_embed_signup_scroll">
-                                        <button>
-                                            <a href="http://eepurl.com/ci_tVf">Join Me!</a>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div> --> <!-- opt-in end -->        
+                            <!-- Begin ConvertKit Signup Form -->
+                            <script async id="_ck_204555" src="https://forms.convertkit.com/204555?v=6"></script>
+                        </div>
                         </aside>
                     </div>
                 </section>
