revamped freelance plan page

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -236,6 +236,11 @@
                     </div>
                 </div>
             </section>
+            <section class="fp-bio" id="calendly">
+                <p>
+                    Have questions before you commit? Hop over to my <a target="_blank" href="http://calendly.com/aleia">calendar</a> and let's chat!
+                </p>
+            </section>
             <section class="fp-dark gumroad">
                 <div>
                     <h2>Ready to get started? Here's what you'll get.</h2>
