updated sales page + links page

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -82,13 +82,13 @@
                     </p>
                     <ul>
                         <li>
-                            <i class="fa fa-plus"></i> 4 1-on-1 one-hour video calls.
+                            <i class="fa fa-plus"></i> Four 1-on-1 60 minute video calls
                         </li>
                         <li>
                             <i class="fa fa-plus"></i> Weekly to-do lists and check-ins.
                         </li>
                         <li>
-                            <i class="fa fa-plus"></i> A written action plan to guide you towards making your freelance goals a reality that works through 4 key modules (1)Finding your freelance niche, (2)What to learn next, (3)Build your portfolio, and (4)Market yourself.
+                            <i class="fa fa-plus"></i> A written action plan to guide you towards making your freelance goals a reality. The plan works through 4 key modules (1)Finding your freelance niche, (2)What to learn next, (3)Build your portfolio, and (4)Market yourself.
                         </li>
                         <li>
                             <i class="fa fa-plus"></i> Eight weeks of email support from a full-time freelancer who already quit her full-time job and is now location independent.
@@ -103,17 +103,17 @@
                 </div>
                 <div class="solution-background" id="bonus">
                     <p class="emphasis">
-                        <span>The first three to purchase will also recieve...</span>
+                        <span>The first three to purchase will also receive...</span>
                     </p>
                     <ul>
                         <li>
-                            <i class="fa fa-star"></i> One extra 1-hour video call.
+                            <i class="fa fa-star"></i> One extra 60-minute video call. <span>($249 value)</span>
                         </li>
                         <li>
-                            <i class="fa fa-star"></i> Two additional weeks of email support.
+                            <i class="fa fa-star"></i> Two additional weeks of email support. <span>($99 value)</span>
                         </li>
                         <li>
-                            <i class="fa fa-star"></i> Lock-in early bird pricing.
+                            <i class="fa fa-star"></i> Lock-in early bird pricing. <span>($199 value)</span>
                         </li>
                     </ul>
                 </div>
@@ -240,7 +240,7 @@
                             <i class="fa fa-check"></i> You're almost decided on choosing your side hustle but you need help making a plan to <span>quit your day job</span>.
                         </p>
                         <p>
-                            <i class="fa fa-check"></i> You want to work together someone who took their <span>side hustle full-time</span> to build your side hustle education, implementation, and marketing plan.
+                            <i class="fa fa-check"></i> You need someone to guide you on the right path towards making your <span>freelance passion profitable</span>.
                         </p>
                         <p>
                             <i class="fa fa-check"></i> You have a full-time job and a full-time life. But <span>you're tired of fitting your life around your job</span> and are ready to make a change.
