--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -53,6 +53,9 @@
             <div> <!-- Freelance Plan -->
                 <p><a href="bit.ly/freelance-plan" target="_blank">The Freelance Plan</a></p>
             </div>
+            <div> <!-- Consultation Calls -->
+                <p><a href="bit.ly/aleia-chat" target="_blank">Schedule Consultation Call</a></p>
+            </div>
             <div> <!-- AW.COM -->
                 <p><a href="bit.ly/aleiawalker" target="_blank">The Website</a></p>
             </div>
