updated meta tags + added 1 more FAQ to FP page

--- a/march-update/about/index.html
+++ b/march-update/about/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>About Aleia Walker</title>
-        <meta name="description" content="Aleia Walker is a resource library for freelancers and side hustlers looking to take their side hustles full-time.">
+        <meta name="description" content="Aleia Walker is a web developer and freelance mentor helping creatives quit their day jobs.">
         <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development,resources, freelance library, freelance plan, atlanta, remote" >
         <meta name="author" content="Aleia Walker" >
     
