--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Aleia Walker | Freelance Plan</title>
-        <meta name="description" content="Aleia Walker is a resource library for freelancers and side hustlers looking to take their side hustles full-time.">
+        <meta name="description" content="The Freelance Plan is an 8-week 1-on-1 mentoring program to help creatives - web designers, web developers, photographers, calligraphers, and others - quit their day jobs for full-time freelance.">
         <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development,resources, freelance library, freelance plan, atlanta, remote" >
         <meta name="author" content="Aleia Walker" >
     
@@ -283,6 +283,13 @@
                     </p>
                     <p>
                         The calls will take place via video chat and will occur every other week. You'll schedule the first appointment on your own and then we will schedule reoccuring appointments together.
+                    </p>
+                    <div class="faq-spacer"></div>
+                    <p class="emphasis">
+                        <span>Do I think you you'll quit your day job after two months of working with me?</span>
+                    </p>
+                    <p>
+                        The short answer is no. The Freelance Plan is designed to be a kick in the butt to get you moving. After two months you'll understand your business strengths and weaknesses and have an action plan to work with moving forward until you can quit your day job.
                     </p>
                 </div>
             </section>
