--- a/march-update/thank-you/index.html
+++ b/march-update/thank-you/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Aleia Walker</title>
-        <meta name="description" content="Aleia Walker is a web developer and freelance mentor helping creatives quit their day jobs.">
+        <meta name="description" content="Thank you page for email list subscriber.">
         <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development, resources, freelance library, freelance plan, atlanta, remote" >
         <meta name="author" content="Aleia Walker">
         <meta name="p:domain_verify" content="26747e1e564f614a66efbbd3db924195"/> <!-- pinterest -->
@@ -41,7 +41,7 @@
 
 
     </head>
-    <body class="homepage sales">
+    <body id="email-opt-in">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -70,47 +70,6 @@
                     </li>
                 </ul>
             </header>
-            <section id="menu-main" class="uppercase">
-                <div class="menu-wrapper">
-                    <ul class="menu-active">
-                        <li>
-                            <a href="#">
-                                Home                                
-                            </a>
-                        </li>
-                        <li class="spacer"></li>
-                        <li>
-                            <a href="about/">
-                                About Me
-                            </a>
-                        </li>
-                        <li class="spacer"></li>
-                        <li>
-                            <a href="work-with-me/">
-                                Work with Me
-                            </a>
-                        </li>
-                        <li class="spacer"></li>
-                        <li>
-                            <a href="portfolio/">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="blog/">
-                                Blog
-                            </a>
-                        </li>
-                        <li class="spacer"></li>
-                        <li>
-                            <a href="contact/">
-                                Contact
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </section>
             <div class="menu-hide"> 
                 <section class="welcome">
                     <aside class="welcome-left">
