--- a/march-update/thank-you/index.html
+++ b/march-update/thank-you/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aleia Walker</title>
+        <title>Aleia Walker | Web Developer and Freelance Mentor</title>
         <meta name="description" content="Thank you page for email list subscriber.">
         <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development, resources, freelance library, freelance plan, atlanta, remote" >
         <meta name="author" content="Aleia Walker">
@@ -11,17 +11,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+        <link rel="stylesheet" type="text/css" href="../fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 
         <!-- Place favicon.ico in the root directory -->
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="../favicon.ico">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/font-awesome.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
 
         <!-- Facebook Pixel Code -->
         <script>
@@ -41,168 +41,46 @@
 
 
     </head>
-    <body id="email-opt-in">
+    <body id="email-thank-you">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="wrapper">
-            <header class="page-header">
-                <figure class="logo">
-                    <a href="#"><img src="img/logo.svg"></a>
-                </figure>
-                <ul id="home-menu">
-                    <li>
-                        <a href="about/">
-                            About Me
-                        </a>
-                    </li>
-                    <li>
-                        <a href="freelance-plan/">
-                            Freelance Plan
-                        </a>
-                    </li>
-                    <li>
-                        <a href="blog/">
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-            </header>
-            <div class="menu-hide"> 
-                <section class="welcome">
-                    <aside class="welcome-left">
-                        <div class="welcome-intro">
-                            <p>
-                                <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
-                            </p>
-                            <h1 class="uppercase">Aleia Walker</h1>
-                            <p class="welcome-tagline">
-                                <span class="welcome-span">I am a web developer + <a href="https://www.bit.ly/freelance-plan">and freelance mentor</a> + instructor at Skillcrush</span>.
-                            </p>
-                        </div> <!-- welcome info wrapper -->
+        <header>
+            <figure>
+                <a href="https://aleiawalker.com" target="_blank"><img src="../img/logo.svg" alt="aleia walker logo"></a>
+            </figure>    
+            <div class="header-content">
+                <div>
+                    <h1>Thank you, you're now registered!</h1>
+                    <p>Check your inbox for the link to your download in a few minutes. If you want access to more like this, join the Freelance Library.</p>
+                    <p>The Freelance Library, is a collection of resource guides designed to make it easy for freelancers to get help.</p>
+                </div>
+            </div>
+        </header>
+        <section class="thank-you-content">
+            <div class="thank-you-content-wrapper">
+                <p>Each month, two guides will be released and we'll cover topics such as:</p>
 
-                        <div class="opt-in-divider"></div>
-                    
-                        <div class="opt-in-tagline">
-                            <p>... and I help freelancers quit their day jobs.</p>
-                            <p>Stop working alone in a bubble and ask for help. Download the guide to find your tribe.</p>
-                        </div>
-                    </aside>
-                    <aside class="welcome-right">
-                        <figure class="opt-in">
-                            <img src="img/freelance-plan-how-to-find-your-tribe-cover.jpg" alt="freelancing how to find your tribe">
-                        </figure>
-                        <div class="email-signup">
-                            <!-- Begin ConvertKit Signup Form -->
-                            <script async id="_ck_204555" src="https://forms.convertkit.com/204555?v=6"></script>
-                        </div>
-                    </aside> <!-- welcome right end -->
-                </section>
-                <section class="offerings">
-                    <div class="offerings-container">
-                        <h2>Let's talk about...</h2>
-                        <div class="offerings-container-wrapper">
-                            <article class="offerings-item" id="resources">
-                                <div class="offerings-items-container">
-                                    <h3>...freelance resources.</h3>
-                                    <div class="offerings-item-wrapper">
-                                        <p>
-                                            You're a creative trying to choose a side hustle to be. Or a side hustler trying to learn skills to be better at your craft.    
-                                        </p>
-                                        <button>
-                                            <a href="resources/">Want more resources?</a>
-                                        </button>
-                                    </div>
-                                </div>
-                            </article>
-                            <article class="offerings-item" id="hack-your-hustle">
-                                <div class="offerings-items-container">
-                                    <h3>...quitting your 9 to 5 without going back to school.</h3>
-                                    <div class="offerings-item-wrapper">
-                                        <p>
-                                            You don't have the time, energy, or money to start your career over by traditional means. You need a new career and don't want to spend forever getting there. You want to work together someone who took their side hustle full-time so they can show you the path to do the same for yourself - in less time.  
-                                        </p>
-                                        <button>
-                                            <a href="freelance-plan/">Ready to make your plan?</a>
-                                        </button>
-                                    </div>
-                                </div>
-                            </article> 
-                            <article class="offerings-item" id="the-blog">
-                                <div class="offerings-items-container">
-                                    <h3>...freelance tips.</h3>
-                                    <div class="offerings-item-wrapper">
-                                        <p>
-                                            You're not ready to jump head first into a mentorship package, a la the Freelance Plan but you do want a deeper understanding of all things freelance.
-                                        </p>
-                                        <button>
-                                            <a href="blog/">Read the blog.</a>
-                                        </button>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- <article class="offerings-item" id="squarespace-in-a-box">
-                                <div class="offerings-items-container">
-                                    <h3>...what to put on your website.</h3>
-                                    <div class="offerings-item-wrapper">
-                                        <p>
-                                            You're a freelancer now! You're building a client base and now you're ready to turn strangers into clients with your website. You want to work with someone to figure what to put on your website, get it up and running in 30 days, and be able to manage it on your own.
-                                        </p>
-                                        <button>
-                                            <a href="squarespace-in-a-box/">Ready to create your site?</a>
-                                        </button>
-                                    </div>
-                                </div>
-                            </article> --> 
-                        </div> <!-- offerings container wrapper -->
-                    </div>
-                </section>
-            </div>  <!-- menu hide -->
-                <footer>
-                    <div class="footer-copy">
-                        <ul class="social">
-                            <li>
-                                <a href="http://bit.ly/twitter-aleia" target="_blank">
-                                    <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a href="https://github.com/msaleia" target="_blank">
-                                    <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
-                                </a>
-                            </li> -->
-                            <li>
-                                <a href="https://linkedin.com/in/aleiawalker" target="_blank">
-                                    <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://bit.ly/pinterest-aleia" target="_blank">
-                                    <i class="fa fa-pinterest-p fa-lg" alt="pinterest icon"></i>
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a href="https://behance.net/aleiawalker" target="_blank">
-                                    <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
-                                </a>
-                            </li> -->
-                            <li>
-                                <a href="http://bit.ly/instagram-aleia">
-                                    <i class="fa fa-instagram fa-lg" alt="instagram icon"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:aleia@aleiawalker.com">
-                                    <i class="fa fa-envelope fa-lg" alt="email icon"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <p class="footer-tag">Copyright &copy; 2017, Aleia Walker. All rights reserved.</p>
-                    </div>
-                </footer>
-        </div> <!-- wrapper div ended -->
+                <ul>
+                    <li><i class="fa fa-circle"></i> DIYing your Copy</li>
+                    <li><i class="fa fa-circle"></i> Deciding on Content for your Website</li>
+                    <li><i class="fa fa-circle"></i> DIYing your Branding</li>
+                    <li><i class="fa fa-circle"></i> Choosing an Email Service Provider</li>
+                    <li><i class="fa fa-circle"></i> Goal Setting for Freelancers</li>
+                    <li><i class="fa fa-circle"></i> Managing Clients</li>
+                    <li><i class="fa fa-circle"></i> Pricing Projects as a Freelancer</li>
+                    <li><i class="fa fa-circle"></i> SEO for Freelancers</li>
+                    <li><i class="fa fa-circle"></i> Building Digital Products</li>
+                    <li><i class="fa fa-circle"></i> Social Media for the Online Business Owner</li>
+                    <li><i class="fa fa-circle"></i> Intro to Understanding Color Theory & Typography Rules</li>
+                </ul>
+                
+                <h3>The Freelance Library launches Friday, June 3rd but if you purchase now you'll lock in early bird pricing of $4.99. When the Freelance Library launches to the public, it will double in price to $9.99.</h3>
+
+                <button><a href="https://gum.co/freelance-library target="blank">Let me in the Freelance Plan</a></button>
+            </section>
 
         <script>
             fbq('track', 'ViewContent');
