created Freelance Library sales page

--- a/march-update/thank-you/index.html
+++ b/march-update/thank-you/index.html
@@ -79,7 +79,7 @@
                 
                 <h3>The Freelance Library launches Friday, June 3rd but if you purchase now you'll lock in early bird pricing of $4.99. When the Freelance Library launches to the public, it will double in price to $9.99.</h3>
 
-                <button><a href="https://gum.co/freelance-library target="blank">Let me in the Freelance Plan</a></button>
+                <button><a href="https://gum.co/freelance-library" target="_blank">Let me in the Freelance Plan</a></button>
             </section>
 
         <script>
