updated links page

--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -50,20 +50,21 @@
         <h1>Aleia Walker</h1>
 
         <article>
-            <div> <!-- Freelance Plan -->
-                <p><a href="bit.ly/freelance-plan" target="_blank">The Freelance Plan</a></p>
-            </div>
-            <div> <!-- Consultation Calls -->
-                <p><a href="bit.ly/aleia-chat" target="_blank">Schedule Consultation Call</a></p>
-            </div>
-            <div> <!-- AW.COM -->
-                <p><a href="bit.ly/aleiawalker" target="_blank">The Website</a></p>
+            <div> <!-- Freelance Library -->
+                <p><a href="http://bit.ly/freelance-library" target="_blank">The Freelance Library</a></p>
             </div>
             <div> <!-- Blog -->
                 <p><a href="https://www.aleiawalker.com/blog" target="_blank">The Blog</a></p>
             </div>
-            <div> <!-- Freelance Library -->
-                <p><a href="bit.ly/freelance-plan" target="_blank">The Freelance Library</a></p>
+            <!-- <div>  Consultation Calls 
+
+                 <p><a href="bit.ly/aleia-chat" target="_blank">Schedule Consultation Call</a></p> 
+            </div> -->
+            <div> <!-- AW.COM -->
+                <p><a href="http://bit.ly/aleiawalker" target="_blank">The Website</a></p>
+            </div>
+            <div> <!-- Freelance Plan -->
+                <p><a href="http://bit.ly/freelance-plan" target="_blank">The Freelance Plan</a></p>
             </div>
             <div> <!-- OPT-IN Find your tribe -->
                 <p><a href="http://bit.ly/find-your-tribe-aw" target="_blank">[FREEBIE] Don't Work Alone, Find your Tribe</a></p>
