--- a/march-update/index.html
+++ b/march-update/index.html
@@ -52,7 +52,7 @@
                 <figure class="logo">
                     <a href="#"><img src="img/logo.svg"></a>
                 </figure>
-                <ul id="home-menu">
+                <ul id="home-menu" class="main-menu-home">
                     <li>
                         <a href="about/">
                             About Me
@@ -147,13 +147,13 @@
                         <div class="offerings-container-wrapper">
                             <article class="offerings-item" id="resources">
                                 <div class="offerings-items-container">
-                                    <h3>...freelance resources.</h3>
+                                    <h3>...finding freelance resources.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're a creative trying to choose a side hustle to be. Or a side hustler trying to learn skills to be better at your craft.    
+                                            You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming and more time creating. 
                                         </p>
                                         <button>
-                                            <a href="resources/">Want more resources?</a>
+                                            <a href="freelance-library/">Get your library card.</a>
                                         </button>
                                     </div>
                                 </div>
