updated freelance library, links, index, and thank you pages

--- a/march-update/freelance-library/index.html
+++ b/march-update/freelance-library/index.html
@@ -90,9 +90,6 @@
                                 Pre-Order Access to the Freelance Library
                             </button>
                         </a>
-                        <p class="payment-plan">
-                            <span class="strikethrough">$9.99</span> $4.99 until Friday, May 12th at 11:59pm EST
-                        </p>
                     </div>
                 </article>
                 </div>
@@ -132,14 +129,14 @@
                         <span>What happens when I purchase the Freelance Library?</span>
                     </p>
                     <p>
-                        Shortly after purchase, you will receive a download of your free sample guide, How to Find your Tribe. And you'll be first on the list to break the doors down Friday, June 3rd when the Freelance Library launched.
+                        Shortly after purchase, you will receive a download of your free sample guide, How to Find your Tribe. And you'll be first on the list to break the doors down Saturday, June 3rd when the Freelance Library launched.
                     </p>
                     <div class="faq-spacer"></div>
                     <p class="emphasis">
-                        <span>Why should I buy now?</span>
+                        <span>Is there any additional support included?</span>
                     </p>
                     <p>
-                        Buy now to lock-in early bird pricing of $4.99 per month forever. If you register atfter May 12th, you'll have to pay $9.99 per month with the latecomers.
+                        Yes! If you subscribe to the Freelance Library you will receive access to our private community forum.
                     </p>
                     <div class="faq-spacer"></div>
                     <p class="emphasis">
