--- a/march-update/index.html
+++ b/march-update/index.html
@@ -150,7 +150,7 @@
                                     <h3>...finding freelance resources.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming and more time creating. 
+                                            You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming acd sdfsdand more time creating. 
                                         </p>
                                         <button>
                                             <a href="freelance-library/">Get your library card.</a>
