--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -50,6 +50,9 @@
         <h1>Aleia Walker</h1>
 
         <article>
+            <div> <!-- 31 Things Post -->
+                <p><a href="https://www.aleiawalker.com/blog/boss-ladies-invested/" target="_blank">31 Things Boss Ladies Wish they Invested in Earlier in their Businesses</a></p>
+            </div>
             <div> <!-- Freelance Library -->
                 <p><a href="http://bit.ly/freelance-library" target="_blank">The Freelance Library</a></p>
             </div>
