--- a/march-update/thank-you/index.html
+++ b/march-update/thank-you/index.html
@@ -59,27 +59,63 @@
                 </div>
             </div>
         </header>
-        <section class="thank-you-content">
-            <div class="thank-you-content-wrapper">
-                <p>Each month, two guides will be released and we'll cover topics such as:</p>
 
-                <ul>
-                    <li><i class="fa fa-circle"></i> DIYing your Copy</li>
-                    <li><i class="fa fa-circle"></i> Deciding on Content for your Website</li>
-                    <li><i class="fa fa-circle"></i> DIYing your Branding</li>
-                    <li><i class="fa fa-circle"></i> Choosing an Email Service Provider</li>
-                    <li><i class="fa fa-circle"></i> Goal Setting for Freelancers</li>
-                    <li><i class="fa fa-circle"></i> Managing Clients</li>
-                    <li><i class="fa fa-circle"></i> Pricing Projects as a Freelancer</li>
-                    <li><i class="fa fa-circle"></i> SEO for Freelancers</li>
-                    <li><i class="fa fa-circle"></i> Building Digital Products</li>
-                    <li><i class="fa fa-circle"></i> Social Media for the Online Business Owner</li>
-                    <li><i class="fa fa-circle"></i> Intro to Understanding Color Theory & Typography Rules</li>
-                </ul>
-                
-                <h3>The Freelance Library launches Friday, June 3rd but if you purchase now you'll lock in early bird pricing of $4.99. When the Freelance Library launches to the public, it will double in price to $9.99.</h3>
+        <section class="fp-text">
+                <div>
+                    <p>
+                        Every week you get 50-11 email newsletters delivered to your inbox. 
+                    </p>
+                    <p>
+                        And you want to read at least 200 of them but it's hard to identify what is the most valuable to you right now. So you skim two or three, but don't fully digest any of them.
+                    </p>
+                    <p>
+                        And you know that you're missing out on a ton of great information to help you grow as a creative freelancer.
+                    </p>
+                    <p class="emphasis">
+                        <span>What's a better way of making sure the best bits hand-delivered to you every month?</span>
+                    </p>
+                </div>
+            </section>
 
-                <button><a href="https://gum.co/freelance-library" target="_blank">Let me in the Freelance Plan</a></button>
+            <section class="fp-solution" id="fl-content-thank-you">
+                <div class="fp-solution-wrapper">
+                <div class="solution-background">
+                    <h2 class="emphasis">
+                        What is in the Freelance Library?
+                    </h2>
+                </div>
+                <div class="solution-background" id="freelance-library-buy">
+                    <figure>
+                        <img src="../img/freelance-plan-how-to-find-your-tribe-cover.jpg" alt="freelance library resource guide">
+                    </figure>
+                    <div>
+                        <p class="emphasis">
+                            <span>And you'll also get guides exclusive to the Freelance Library like these...</span>
+                        </p>
+                        <br>
+                        <ul>
+                            <li>
+                                <i class="fa fa-plus"></i> Where to find the best resources for DIYing your website
+                            </li>
+                            <li>
+                                <i class="fa fa-plus"></i> How to get started writing your website copy
+                            </li>
+                            <li>
+                                <i class="fa fa-plus"></i> The best places to find resources on all things legal for creative freelancers
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <article>
+                    <div class="card">
+                        <a href="https://gumroad.com/l/freelance-library" target="_blank">
+                            <button>
+                                <p>Pre-Order Access to the Freelance Library for <span>$9.99</span></p>
+                            </button>
+                        </a>
+                    </div>
+                </article>
+                </div>
             </section>
 
         <script>
